--- a/server/package.json
+++ b/server/package.json
@@ -22,6 +22,8 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "multer-gridfs-storage": "^5.0.2",
-    "nodemon": "^2.0.20"
+    "nodemon": "^2.0.20",
+    "path": "^0.12.7",
+    "url": "^0.11.0"
   }
 }
