--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,2 @@
-DATABASE_URI = mongodb://127.0.0.1:27017/
+DATABASE_URI = "mongodb+srv://salmanazmirafi:salmanazmirafi@cluster0.exejumv.mongodb.net/new-social-ap?retryWrites=true&w=majority"
 PROT = 4000
